tests/baselines/reference/emptyObjectBindingPatternParameter04.errors.txt
tests/cases/conformance/es6/destructuring/emptyObjectBindingPatternParameter04.ts(1,18): error TS2353: Object literal may only specify known properties, and 'a' does not exist in type '{}'.
tests/cases/conformance/es6/destructuring/emptyObjectBindingPatternParameter04.ts(1,24): error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{}'.
tests/cases/conformance/es6/destructuring/emptyObjectBindingPatternParameter04.ts(1,32): error TS2353: Object literal may only specify known properties, and 'c' does not exist in type '{}'.


==== tests/cases/conformance/es6/destructuring/emptyObjectBindingPatternParameter04.ts (3 errors) ====
    function f({} = {a: 1, b: "2", c: true}) {
                     ~
!!! error TS2353: Object literal may only specify known properties, and 'a' does not exist in type '{}'.
                           ~
!!! error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{}'.
                                   ~
!!! error TS2353: Object literal may only specify known properties, and 'c' does not exist in type '{}'.
        var x, y, z;
    }